--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 name: astrbot_plugin_deepwiki # 这是你的插件的唯一识别名。
+display_name: DeepWiki查询
 desc: deepwiki插件 # 插件简短描述
 help: 使用deepwiki查询指定github仓库，可作为问答助手 # 插件的帮助信息
 version: v1.0.1 # 插件版本号。格式：v1.1.1 或者 v1.1
